# GOTTA_BIKE_virtual_team_discord_bot

./: .env_example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
src/: __main__.py  bot.py
src/cogs/: about.py  diagnostics.py  member_sync.py  role_sync.py  team_links.py  zwiftpower.py
